tests/lean/def4.lean.expected.out
f : A → A
def4.lean:9:9: error: type mismatch at application
  f 0
term
  0
has type
  ℕ
but is expected to have type
  A
g : A → A
def4.lean:17:9: error: type mismatch at application
  g 0
term
  0
has type
  ℕ
but is expected to have type
  A
f : Π (A : Type u_1), A → A
f ℕ 0 : ℕ
g 0 : ℕ
